cbeginning/src/compiling_error.txt
D:\sandbox\atomc\cbeginning\src\Robot.h:39:1: error: expected class-name before '{' token
 {
 ^
D:\sandbox\atomc\cbeginning\src\Robot.h:44:1: error: expected class-name before '{' token
 {
 ^
D:\sandbox\atomc\cbeginning\src\Robot.h:49:1: error: expected class-name before '{' token
 {
 ^
D:\sandbox\atomc\cbeginning\src\Robot.h:54:1: error: expected class-name before '{' token
 {
 ^
D:\sandbox\atomc\cbeginning\src\Robot.h:59:1: error: expected class-name before '{' token
 {
 ^
